Refined some layout issues that were found with initial design, and added Oneplus specific styling.

--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -93,3 +93,57 @@
     padding-left: 5rem;
   }
 }
+
+@media only screen and (max-width: 420px) {
+  .checkout-item-container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    .checkout-image-container {
+      padding-top: 1rem;
+      width: 90vw;
+      .checkout-image {
+        width: 60%;
+        height: auto;
+        padding-left: 1rem;
+      }
+    }
+  }
+
+  .description-container {
+    width: 100vw;
+    justify-content: flex-start;
+    padding-left: 0;
+    padding-top: 2rem;
+    padding-right: 1rem;
+    font-size: 1.3rem;
+  }
+
+  .remove-button-container {
+    bottom: 15rem;
+    right: 0;
+    left: 11rem;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .checkout-item-container {
+    .remove-button-container {
+      bottom: 14rem;
+      left: 10rem;
+    }
+  }
+}
+@media only screen and (max-width: 320px) {
+  .checkout-item-container {
+    .description-container {
+      justify-content: space-around;
+      padding-right: 2rem;
+      font-size: 1.2rem;
+    }
+    .remove-button-container {
+      bottom: 13rem;
+      left: 8rem;
+    }
+  }
+}
