--- a/src/components/shop-preview/shop-preview.styles.scss
+++ b/src/components/shop-preview/shop-preview.styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+  overflow-x: hidden;
 
   .title {
     max-width: 50px;
@@ -22,7 +23,7 @@
 
   .preview-content {
     display: grid;
-    width: 90vw;
+    width: 100vw;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 15px;
     align-self: center;
@@ -41,10 +42,29 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 900px) {
+  .shop-preview-container {
+    .preview-content {
+      width: 100vw;
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 0;
+
+      .shop-item {
+        padding: 0;
+        .price-box {
+          padding: 0;
+          width: 20%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
   .shop-preview-container {
     .title {
       margin-top: 3.1rem;
+      margin-left: 0;
       .subtitle {
         font-size: 1rem;
       }
@@ -57,7 +77,7 @@
       column-gap: 0;
 
       .shop-item {
-        width: 49.9vw;
+        width: 50vw;
         padding: 0;
       }
     }
@@ -69,16 +89,42 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 420px) {
   .shop-preview-container {
+    width: 100vw;
     .preview-content {
-      grid-template-columns: repeat(3, 1fr);
+      width: 100vw;
+
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 0;
+
       .shop-item {
-        .price-box {
-          padding: 0;
-          width: 20%;
+        width: 50vw;
+        padding: 0;
+        padding-bottom: 3rem;
+        .image {
+          width: 50vw;
         }
       }
+    }
+
+    .add-button {
+      opacity: 1;
+      min-width: 130px;
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .shop-preview-container {
+    .preview-content {
+      .shop-item {
+        padding-bottom: 4rem;
+      }
+    }
+
+    .add-button {
+      height: 50px;
     }
   }
 }
