--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -51,11 +51,38 @@
     visibility: hidden;
   }
   .subtotal-container {
-    max-width: 100vw;
+    width: 100vw;
   }
 
   .subtotal-value {
     padding-left: 6rem;
     padding-right: 4.5rem;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .page-container {
+    margin: 0;
+    overflow-x: hidden;
+    max-width: 100vw;
+  }
+  .subtotal-container {
+    width: 100vw;
+    justify-content: center;
+  }
+
+  .subtotal-value {
+    font-size: 1.6rem;
+    padding-left: 3rem;
+    padding-right: 1rem;
+  }
+
+  .payment-container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    .test-message {
+      padding: 2rem;
+    }
   }
 }
