--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -8,7 +8,7 @@ body {
   align-items: center;
   padding: 0;
   height: 90vh;
-  width: 100vw;
+  width: 99vw;
 }
 
 @media screen and (max-width: 768px) {
